--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,9 +15,18 @@ jobs:
         uses: pnpm/action-setup@v4
         with:
           version: latest
+          run_install: false
+
+      - name: Dependencies
+        run: pnpm install
+
+      - name: Build
+        run: tsc
 
       - name: Assets
         run: cp package.json dist/package.json
 
       - name: Publish
-        run: cd dist && pnpm publish --access public --publish-branch release
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: cd dist && pnpm publish --access public --no-git-checks
