--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,10 +15,7 @@ jobs:
         uses: pnpm/action-setup@v4
         with:
           version: latest
-          run_install: false
-
-      - name: Dependencies
-        run: pnpm install
+          run_install: true
 
       - name: Build
         run: tsc
@@ -29,4 +26,8 @@ jobs:
       - name: Publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: cd dist && pnpm publish --access public --no-git-checks
+        run: |
+          cd dist
+          echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > ~/.npmrc
+          echo "registry=https://registry.npmjs.org/" >> ~/.npmrc
+          pnpm publish --access public --no-git-checks
