docs: added keywords

--- a/package.json
+++ b/package.json
@@ -11,7 +11,18 @@
 		"esbuild tool",
 		"build plugin",
 		"build tool",
-		"package.json"
+		"package.json",
+		"developer tools",
+		"build process",
+		"plugin",
+		"esbuild dependency",
+		"dependency management",
+		"optimize package json",
+		"validate package json",
+		"esbuild copy package json",
+		"esbuild copy",
+		"package json plugin",
+		"package config plugin"
 	],
 	"license": "MIT",
 	"version": "1.0.0",
