--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
 		"package config plugin"
 	],
 	"license": "MIT",
-	"version": "1.0.4",
+	"version": "1.0.5",
 	"bugs": "https://github.com/simonkovtyk/esbuild-plugin-package-json/issues",
 	"homepage": "https://github.com/simonkovtyk/esbuild-plugin-package-json",
 	"repository": {
@@ -34,7 +34,7 @@
 	},
 	"exports": {
 		".": {
-			"default": "./public-api.ts",
+			"default": "./public-api.js",
 			"types": "./public-api.d.ts"
 		}
 	},
