--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,7 @@ jobs:
         run: |
           cp package.json dist/package.json
           cp README.md dist/README.md
+          cp LICENSE dist/LICENSE
 
       - name: Config
         env:
