--- a/package.json
+++ b/package.json
@@ -55,8 +55,17 @@
 		"esbuild": ">=0.20.0"
 	},
 	"devDependencies": {
-		"typescript": "^5.5.4",
+		"@eslint/js": "^9.10.0",
+		"@types/eslint__js": "^8.42.3",
+		"@types/node": "^22.5.4",
 		"@types/npmcli__package-json": "^4.0.4",
-		"@types/node": "^22.5.4"
+		"eslint": "^9.10.0",
+		"typescript": "^5.5.4",
+		"typescript-eslint": "^8.6.0",
+		"@stylistic/eslint-plugin-ts": "^2.8.0",
+		"husky": "^9.1.6"
+	},
+	"scripts": {
+		"prepare": "husky"
 	}
 }
