--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
 		"type": "git",
 		"url": "git+https://github.com/simonkovtyk/esbuild-plugin-package-json.git"
 	},
+	"types": "./public-api.d.ts",
 	"exports": {
-		"default": "./public-api.js",
-		"types": "./public-api.d.ts"
+		"default": "./public-api.js"
 	},
 	"author": {
 		"name": "Simon Kovtyk",
