--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -20,8 +20,7 @@ jobs:
           version: latest
           run_install: true
 
-      - name: TypeScript Compiler
-        run: tsc --noEmit
-
       - name: Lint
-        run: pnpx eslint .
+        run: |
+          tsc --noEmit
+          pnpx eslint .
