ci: fix of bot commenting interpreted as code line

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -29,23 +29,26 @@ jobs:
   notify_success:
     runs-on: ubuntu-latest
     needs: style_check
+
     if: success()
     steps:
       - name: Comment success
         uses: actions/github-script@v7
         with:
           script: |
+            const body = `### ✅ Successful Review
+
+            Great news! Your pull request has been successfully reviewed, and no errors were found.
+
+            ### ⏳ Next Steps
+
+            The author will review the changes shortly, and we look forward to merging your contributions into the project. Thank you for your hard work and dedication! 🎉`
+            
             github.rest.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: context.issue.number,
-              body: `### ✅ Successful Review
-  
-                Great news! Your pull request has been successfully reviewed, and no errors were found.
-  
-                ### ⏳ Next Steps
-  
-                The author will review the changes shortly, and we look forward to merging your contributions into the project. Thank you for your hard work and dedication! 🎉`
+              body
             });
             
             github.rest.issues.addLabels({
@@ -63,17 +66,19 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
+            const body = `### ⚠️ Review Required
+
+            Thank you for your contribution! Upon review, we've identified some issues in the pull request that need to be addressed. Please take a moment to review the errors and make the necessary adjustments before we can proceed with the integration.
+
+            ### 🛠️ Next Steps
+
+            Feel free to reach out if you have any questions or need assistance. We appreciate your effort in improving our codebase! 🙏`
+            
             github.rest.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: context.issue.number,
-              body: `### ⚠️ Review Required
-  
-                Thank you for your contribution! Upon review, we've identified some issues in the pull request that need to be addressed. Please take a moment to review the errors and make the necessary adjustments before we can proceed with the integration.
-  
-                ### 🛠️ Next Steps
-  
-                Feel free to reach out if you have any questions or need assistance. We appreciate your effort in improving our codebase! 🙏`
+              body
             });
 
             github.rest.issues.addLabels({
