--- a/.github/workflows/pull_request-opened.yml
+++ b/.github/workflows/pull_request-opened.yml
@@ -15,15 +15,17 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
+            const body = `### 🎉 Welcome!
+
+            Thank you for your contribution and for opening this pull request.
+
+            ### 📖 Contribution Guidelines
+
+            For more details on how to contribute effectively, please refer to our [How to Contribute](https://github.com/simonkovtyk/esbuild-plugin-package-json/blob/main/docs/guides/HOW_TO_CONTRIBUTE.md) document.`
+            
             github.rest.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: context.issue.number,
-              body: `### 🎉 Welcome!
-
-                Thank you for your contribution and for opening this pull request.
-            
-                ### 📖 Contribution Guidelines
-  
-                For more details on how to contribute effectively, please refer to our [How to Contribute](https://github.com/simonkovtyk/esbuild-plugin-package-json/blob/main/docs/guides/HOW_TO_CONTRIBUTE.md) document.`
+              body
             });
