--- a/.github/workflows/pull_request-opened.yml
+++ b/.github/workflows/pull_request-opened.yml
@@ -15,6 +15,20 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
+            await github.pulls.addAssignees({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              pull_number: context.payload.pull_request.number,
+              assignees: [ "simonkovtyk" ]
+            });
+            
+            github.rest.issues.addLabels({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              labels: [ "feature" ]
+            });
+            
             const body = `### 🎉 Welcome!
 
             Thank you for your contribution and for opening this pull request.
