--- a/.github/workflows/pull_request-opened.yml
+++ b/.github/workflows/pull_request-opened.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            await github.pulls.addAssignees({
+            github.rest.pulls.addAssignees({
               owner: context.repo.owner,
               repo: context.repo.repo,
               pull_number: context.payload.pull_request.number,
