--- a/.github/workflows/pull_request-opened.yml
+++ b/.github/workflows/pull_request-opened.yml
@@ -15,12 +15,12 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            github.rest.pulls.addAssignees({
+            github.rest.issues.addAssignees({
+              issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              pull_number: context.payload.pull_request.number,
               assignees: [ "simonkovtyk" ]
-            });
+            })
             
             github.rest.issues.addLabels({
               issue_number: context.issue.number,
