--- a/.github/workflows/pull_request-opened.yml
+++ b/.github/workflows/pull_request-opened.yml
@@ -11,7 +11,7 @@ jobs:
   notify-greet:
     runs-on: ubuntu-latest
     steps:
-      - name: Greet
+      - name: Auto assign
         uses: actions/github-script@v7
         with:
           script: |
@@ -20,15 +20,18 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               assignees: [ "simonkovtyk" ]
-            })
-            
+            });
+
             github.rest.issues.addLabels({
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
               labels: [ "feature" ]
             });
-            
+      - name: Greet
+        uses: actions/github-script@v7
+        with:
+          script: |
             const body = `### 🎉 Welcome!
 
             Thank you for your contribution and for opening this pull request.
