--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
           version: latest
           run_install: true
 
-      - name: Lint
+      - name: Lint code
         run: |
           tsc --noEmit
           pnpx eslint .
