--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
 		"@commitlint/cli": "^19.5.0",
 		"@commitlint/config-conventional": "^19.5.0",
 		"@commitlint/cz-commitlint": "^19.5.0",
+		"semantic-release": "^24.1.1",
 		"inquirer": "9.3.6",
 		"commitizen": "^4.3.0",
 		"@types/eslint__js": "^8.42.3",
