--- a/.github/workflows/pull_request-opened.yml
+++ b/.github/workflows/pull_request-opened.yml
@@ -1,5 +1,4 @@
 name: Pull request opened
-
 on:
   pull_request:
     types:
@@ -10,6 +9,8 @@ on:
 jobs:
   notify-greet:
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
     steps:
       - name: Auto assign
         uses: actions/github-script@v7
@@ -38,7 +39,7 @@ jobs:
 
             ### 📖 Contribution Guidelines
 
-            For more details on how to contribute effectively, please refer to our [How to Contribute](https://github.com/simonkovtyk/esbuild-plugin-package-json/blob/main/docs/guides/HOW_TO_CONTRIBUTE.md) document.`
+            For more details on how to contribute effectively, please refer to our [How to Contribute](https://github.com/simonkovtyk/esbuild-plugin-cleanup/blob/main/docs/guides/HOW_TO_CONTRIBUTE.md) document.`
             
             github.rest.issues.createComment({
               owner: context.repo.owner,
