--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,5 +1,4 @@
 name: Pull request checks
-
 on:
   pull_request:
     types:
@@ -15,8 +14,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-      - name: Install
+      - name: NodeJS install
+        uses: actions/setup-node@v4
+        with:
+          node-version: "lts/*"
+
+      - name: pnpm install
         uses: pnpm/action-setup@v4
         with:
           version: latest
@@ -24,18 +30,19 @@ jobs:
 
       - name: Lint code
         run: |
-          pnpm run lint:tsc
-          pnpm run lint:eslint
+          pnpm run tsc --noEmit
+          pnpm run eslint .
 
       - name: Lint commits
         if: github.event_name == 'pull_request'
         run: |
-          commitlint --from ${{ github.event.pull_request.head.sha }}~${{ github.event.pull_request.commits }} --to ${{ github.event.pull_request.head.sha }} --verbose
+          pnpm run commitlint --from ${{ github.event.pull_request.base.sha }} --to ${{ github.event.pull_request.head.sha }} --verbose
 
   notify_success:
     runs-on: ubuntu-latest
     needs: style_check
-
+    permissions:
+      pull-requests: write
     if: success()
     steps:
       - name: Comment success
@@ -66,6 +73,8 @@ jobs:
   notify_failure:
     runs-on: ubuntu-latest
     needs: style_check
+    permissions:
+      pull-requests: write
     if: failure()
     steps:
       - name: Comment failure
