--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
 		"package config plugin"
 	],
 	"license": "MIT",
-	"version": "2.0.0-next.2",
+	"version": "2.0.0",
 	"bugs": "https://github.com/simonkovtyk/esbuild-plugin-package-json/issues",
 	"homepage": "https://github.com/simonkovtyk/esbuild-plugin-package-json",
 	"repository": {
